# Polylla-Mesh-DCEL

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp
src/: CMakeLists.txt  halfedge.hpp  polygon.hpp  polylla.hpp  triangulation.hpp  vertex.hpp
